network/pod-alpine-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-alpine-b
  namespace: namespace-b
spec:
  containers:
  - name: alpine
    image: alpine/curl
    command: ["/bin/sleep", "3600"]
