network/nginx-service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-a
  namespace: namespace-a
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
