network/np-allow-from-namespace-b.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-namespace-b
  namespace: namespace-a
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: namespace-b
  ports:
  - protocol: TCP
    port: 80
  policyTypes:
  - Ingress
