network/np-allow-from-pod-with-label.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-pod-with-label
  namespace: namespace-a
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          acesso: "permitir"
  policyTypes:
  - Ingress
